[package]
name        = "teos"
version     = "0.1.0"
authors     = ["Cups <cups@shaiya.net>"]
edition     = "2018"

[lib]
crate-type  = ["cdylib"] # Compile the library as a C-compatible dynamic library

[dependencies]
anyhow              = "1.0"
tracing             = "0.1"
tracing-appender    = "0.1.2"
tracing-subscriber  = "0.2"
